# Applied_Control_Systems_1_autonomous_cars-_Math_PID_MPC

./: .gitignore
FreeFall_Object/: README.md  build.ps1  run_all.ps1
FreeFall_Object/code/: CMakeLists.txt  controller.c  controller.h  fallingobject.c  fallingobject.h  main.c  plot.c  plot.h
FreeFall_Object/diagrams/: README.md  generate_system_diagrams.py
FreeFall_Object/documentation/: ANALYSIS_PLOTS_README.md  ANGLE_STUDY_RESULTS.md  BUILD_SUMMARY.md  COMPARISON_ANALYSIS.md  HARDCODE_REMOVAL.md  OPTION_B_ENHANCEMENTS.md  PATH_UPDATES_COMPLETE.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  README_VISUALIZATION.md  SETUP_COMPLETE.md  SYSTEM_OVERVIEW.md
FreeFall_Object/scripts/: README.md  analyze_comprehensive.py  analyze_random_scenarios.py  animate_realtime.py  generate_random_scenarios.py  run_all_angle_animations.py  visualize_angles.py
Water_Tank_Kp/: CMakeLists.txt  COMPARISON.md  Makefile  README_CONTROLLERS.md  calculus_sim_waterTanks_Kp_controller.py  controller.c  main.c  plot.c  plot.h  watertank.c  watertank.h
Water_Tank_Kp/documentation/: CONTROLLER_TUNING_EXPLANATION.md  HARDWARE_DESIGN_TM4C129.md  README.md  README_CONTROLLERS.md
